force-app/main/default/objects/Incident_Tracker__c/fields/Aurora_Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>Aurora_Ticket_ID__c</fullName>
    <description>Was previously idauroratkt</description>
    <inlineHelpText>Same as Aurora Incident ID</inlineHelpText>
    <label>Aurora Ticket ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>