force-app/main/default/objects/Incident_Tracker__c/fields/Auto_Keygen__c.field-meta.xml
<CustomField>
    <fullName>Auto_Keygen__c</fullName>
    <inlineHelpText>Used for legacy tool, can be deleted once powerbi dashboard is pulling from sf</inlineHelpText>
    <label>Auto Keygen</label>
    <length>30</length>
    <type>Text</type>
</CustomField>