force-app/main/default/objects/Incident_Tracker__c/fields/CaptureApprovalProcessApproved__c.field-meta.xml
<CustomField>
    <fullName>CaptureApprovalProcessApproved__c</fullName>
    <description>We are capturing the Date/Time to CaptureApprovalProcessApproved</description>
    <label>CaptureApprovalProcessApproved</label>
    <type>DateTime</type>
</CustomField>