force-app/main/default/objects/Incident_Tracker__c/fields/CaptureSubmitforApprovalSubmission__c.field-meta.xml
<CustomField>
    <fullName>CaptureSubmitforApprovalSubmission__c</fullName>
    <description>We are capturing the Date/Time to CaptureSubmitforApprovalSubmission</description>
    <label>CaptureSubmitforApprovalSubmission</label>
    <type>DateTime</type>
</CustomField>