force-app/main/default/objects/Incident_Tracker__c/fields/Company_Owner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Company_Owner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Owner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Incident_Trackers1</relationshipName>
    <type>Lookup</type>
</CustomField>