force-app/main/default/objects/Incident_Tracker__c/fields/Conclusion__c.field-meta.xml
<CustomField>
    <fullName>Conclusion__c</fullName>
    <description>was previously notesconclusion</description>
    <label>Conclusion</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>