force-app/main/default/objects/Incident_Tracker__c/fields/Contact_Market__c.field-meta.xml
<CustomField>
    <fullName>Contact_Market__c</fullName>
    <inlineHelpText>Contact from the Site List (named Market contact in legacy spreadsheet)</inlineHelpText>
    <label>Tower Owner contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>