force-app/main/default/objects/Incident_Tracker__c/fields/Contact_Owner_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Incident_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>