force-app/main/default/objects/Incident_Tracker__c/fields/contactSupplier2__c.field-meta.xml
<CustomField>
    <fullName>contactSupplier2__c</fullName>
    <label>contactSupplier2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>