force-app/main/default/objects/Incident_Tracker__c/fields/Crew_Member_1__c.field-meta.xml
<CustomField>
    <fullName>Crew_Member_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crew Member 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incidents (Crew Member 1)</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>