force-app/main/default/objects/Incident_Tracker__c/fields/Crew_Member_2__c.field-meta.xml
<CustomField>
    <fullName>Crew_Member_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crew Member 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incidents (Crew Member 2)</relationshipLabel>
    <relationshipName>Incidents1</relationshipName>
    <type>Lookup</type>
</CustomField>