force-app/main/default/objects/Incident_Tracker__c/fields/Crew_Member_3__c.field-meta.xml
<CustomField>
    <fullName>Crew_Member_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crew Member 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incidents (Crew Member 3)</relationshipLabel>
    <relationshipName>Incidents2</relationshipName>
    <type>Lookup</type>
</CustomField>