force-app/main/default/objects/Incident_Tracker__c/fields/Date_Investigation_Ticket_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Investigation_Ticket_Created__c</fullName>
    <inlineHelpText>Date Investigation ticket was created (triggers off of dateSOSiteSafetyNotified</inlineHelpText>
    <label>Date Investigation Ticket Created</label>
    <type>Date</type>
</CustomField>