force-app/main/default/objects/Incident_Tracker__c/fields/dateA0Occured__c.field-meta.xml
<CustomField>
    <fullName>dateA0Occured__c</fullName>
    <description>DateA0Occured</description>
    <label>Incident Occurred Date</label>
    <type>Date</type>
</CustomField>