force-app/main/default/objects/Incident_Tracker__c/fields/dateM0MarketNotified__c.field-meta.xml
<CustomField>
    <fullName>dateM0MarketNotified__c</fullName>
    <description>dateM0MarketNotified</description>
    <label>Market Notified Date</label>
    <type>Date</type>
</CustomField>