force-app/main/default/objects/Incident_Tracker__c/fields/dateM1AuroraTicketCreated__c.field-meta.xml
<CustomField>
    <fullName>dateM1AuroraTicketCreated__c</fullName>
    <description>dateM1AuroraTicketCreated</description>
    <label>Aurora Ticket Created Date</label>
    <type>Date</type>
</CustomField>