force-app/main/default/objects/Incident_Tracker__c/fields/dateM2RegionNotified__c.field-meta.xml
<CustomField>
    <fullName>dateM2RegionNotified__c</fullName>
    <description>dateM2RegionNotified</description>
    <label>Region Notified Date</label>
    <type>Date</type>
</CustomField>