force-app/main/default/objects/Incident_Tracker__c/fields/dateS0SiteSafetyNotified__c.field-meta.xml
<CustomField>
    <fullName>dateS0SiteSafetyNotified__c</fullName>
    <description>dateS0SiteSafetyNotified</description>
    <label>Site Safety Notified Date</label>
    <type>Date</type>
</CustomField>