force-app/main/default/objects/Incident_Tracker__c/fields/dateS1SupplierSuspensionInitiated__c.field-meta.xml
<CustomField>
    <fullName>dateS1SupplierSuspensionInitiated__c</fullName>
    <description>dateS1SupplierSuspensionInitiated  then was dateS1SupplierSuspensionInitiated now date tmo initiated gc suspension</description>
    <label>Date TMO Initiated GC Suspension</label>
    <type>Date</type>
</CustomField>