force-app/main/default/objects/Incident_Tracker__c/fields/dateS2InitialDocsRcvd__c.field-meta.xml
<CustomField>
    <fullName>dateS2InitialDocsRcvd__c</fullName>
    <description>dateS2InitialDocsRcvd</description>
    <label>Initial Documents Received</label>
    <type>Date</type>
</CustomField>