force-app/main/default/objects/Incident_Tracker__c/fields/dateS3FinalDocsRcvd__c.field-meta.xml
<CustomField>
    <fullName>dateS3FinalDocsRcvd__c</fullName>
    <description>dateS3FinalDocsRcvd</description>
    <label>Final Documents Received</label>
    <type>Date</type>
</CustomField>