force-app/main/default/objects/Incident_Tracker__c/fields/dateS4SupplierSuspensionReleased__c.field-meta.xml
<CustomField>
    <fullName>dateS4SupplierSuspensionReleased__c</fullName>
    <description>dateS4SupplierSuspensionReleased  and Supplier Suspension Released</description>
    <label>Date TMO Released GC Suspension</label>
    <type>Date</type>
</CustomField>