force-app/main/default/objects/Incident_Tracker__c/fields/dateS5InvestigationClosed__c.field-meta.xml
<CustomField>
    <fullName>dateS5InvestigationClosed__c</fullName>
    <description>dateS5InvestigationClosed</description>
    <label>Investigation Closed</label>
    <type>Date</type>
</CustomField>