force-app/main/default/objects/Incident_Tracker__c/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <displayFormat>Incident-{0000}</displayFormat>
    <label>Incident Autonumber field</label>
    <type>AutoNumber</type>
</CustomField>