force-app/main/default/objects/Incident_Tracker__c/fields/Incident_Category__c.field-meta.xml
<CustomField>
    <fullName>Incident_Category__c</fullName>
    <inlineHelpText>Select incident category to help identify type of safety problem.</inlineHelpText>
    <label>Safety Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Notification</fullName>
            </value>
            <value>
                <fullName>Violation</fullName>
            </value>
            <value>
                <fullName>Incident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>