force-app/main/default/objects/Incident_Tracker__c/fields/Incident_Status__c.field-meta.xml
<CustomField>
    <fullName>Incident_Status__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <label>Incident Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Under Investigation</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Incident Approved</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Final Review</fullName>
                <isActive>false</isActive>
                <label>Final Review</label>
            </value>
            <value>
                <fullName>Legal Review</fullName>
                <isActive>false</isActive>
                <label>Legal Review</label>
            </value>
            <value>
                <fullName>Referred to Other Department</fullName>
                <isActive>false</isActive>
                <label>Referred to Other Department</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>