force-app/main/default/objects/Incident_Tracker__c/fields/Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>Incident_Type__c</fullName>
    <description>was previously catindicent</description>
    <label>Incident Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Altercation</fullName>
            </value>
            <value>
                <fullName>Doc (JHA, Certs, Rescue, Rigging)</fullName>
            </value>
            <value>
                <fullName>Dropped Object</fullName>
            </value>
            <value>
                <fullName>Equip Damage</fullName>
            </value>
            <value>
                <fullName>Fatality</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Climber Tie-Off</fullName>
            </value>
            <value>
                <fullName>Solo/Free Climb</fullName>
            </value>
            <value>
                <fullName>Injury</fullName>
            </value>
            <value>
                <fullName>Near Miss</fullName>
            </value>
            <value>
                <fullName>PPE Inadequate</fullName>
            </value>
            <value>
                <fullName>Regulatory</fullName>
            </value>
            <value>
                <fullName>Rigging Incident</fullName>
            </value>
            <value>
                <fullName>Rigging Method</fullName>
            </value>
            <value>
                <fullName>Structure Collapse</fullName>
            </value>
            <value>
                <fullName>Unsafe Structure</fullName>
            </value>
            <value>
                <fullName>Hospitalization</fullName>
            </value>
            <value>
                <fullName>Burglary/Robbery/Theft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>