force-app/main/default/objects/Incident_Tracker__c/fields/IncidentRecordApproved__c.field-meta.xml
<CustomField>
    <fullName>IncidentRecordApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not on the Layout, created just to track if the Incident record is Approved</description>
    <label>IncidentRecordApproved</label>
    <type>Checkbox</type>
</CustomField>