force-app/main/default/objects/Incident_Tracker__c/fields/IncidentRecordsubmittedforApproval__c.field-meta.xml
<CustomField>
    <fullName>IncidentRecordsubmittedforApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not on the Layout, created just to track if the Incident record is sent for Approval</description>
    <label>IncidentRecordsubmittedforApproval</label>
    <type>Checkbox</type>
</CustomField>