force-app/main/default/objects/Incident_Tracker__c/fields/indexOld__c.field-meta.xml
<CustomField>
    <fullName>indexOld__c</fullName>
    <label>indexOld</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>