force-app/main/default/objects/Incident_Tracker__c/fields/Initial_description__c.field-meta.xml
<CustomField>
    <fullName>Initial_description__c</fullName>
    <description>notesInitialDescription</description>
    <label>Initial Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>