force-app/main/default/objects/Incident_Tracker__c/fields/Likelihood__c.field-meta.xml
<CustomField>
    <fullName>Likelihood__c</fullName>
    <inlineHelpText>See Risk Hazard Scoring image below to guide decisions in Likelihood</inlineHelpText>
    <label>Likelihood</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Frequent</fullName>
            </value>
            <value>
                <fullName>Probable</fullName>
            </value>
            <value>
                <fullName>Occasional</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Improbable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>