force-app/main/default/objects/Incident_Tracker__c/fields/Location_Site_Safety__c.field-meta.xml
<CustomField>
    <fullName>Location_Site_Safety__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Site Safety</label>
    <referenceTo>Location_Site_Safety__c</referenceTo>
    <relationshipName>Incident_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>