force-app/main/default/objects/Incident_Tracker__c/fields/Manager_Review__c.field-meta.xml
<CustomField>
    <fullName>Manager_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to escalate the ticket to management- will auto check for certain users.</inlineHelpText>
    <label>Manager Review</label>
    <type>Checkbox</type>
</CustomField>