force-app/main/default/objects/Incident_Tracker__c/fields/Market_Contact__c.field-meta.xml
<CustomField>
    <fullName>Market_Contact__c</fullName>
    <formula>Location_Site_Safety__r.Owner_Contact__c</formula>
    <inlineHelpText>Populated from the location site safety record (site list in incident tracker)</inlineHelpText>
    <label>Owner Contact</label>
    <type>Text</type>
</CustomField>