force-app/main/default/objects/Incident_Tracker__c/fields/Market_Dev__c.field-meta.xml
<CustomField>
    <fullName>Market_Dev__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Dev</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incidents (Market Dev)</relationshipLabel>
    <relationshipName>Incidents6</relationshipName>
    <type>Lookup</type>
</CustomField>