force-app/main/default/objects/Incident_Tracker__c/fields/Market_Formula__c.field-meta.xml
<CustomField>
    <fullName>Market_Formula__c</fullName>
    <formula>Location_Site_Safety__r.mkt_name__c</formula>
    <inlineHelpText>Populated from the location site safety record</inlineHelpText>
    <label>Market</label>
    <type>Text</type>
</CustomField>