force-app/main/default/objects/Incident_Tracker__c/fields/Market_Ops__c.field-meta.xml
<CustomField>
    <fullName>Market_Ops__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Ops</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incidents (Market Ops)</relationshipLabel>
    <relationshipName>Incidents7</relationshipName>
    <type>Lookup</type>
</CustomField>