force-app/main/default/objects/Incident_Tracker__c/fields/Market_Safety__c.field-meta.xml
<CustomField>
    <fullName>Market_Safety__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Safety</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incidents (Market Safety)</relationshipLabel>
    <relationshipName>Incidents8</relationshipName>
    <type>Lookup</type>
</CustomField>