force-app/main/default/objects/Incident_Tracker__c/fields/Owner_Company__c.field-meta.xml
<CustomField>
    <fullName>Owner_Company__c</fullName>
    <formula>Location_Site_Safety__r.Owner_Company__c</formula>
    <label>Owner Company</label>
    <type>Text</type>
</CustomField>