force-app/main/default/objects/Incident_Tracker__c/fields/primary_cause__c.field-meta.xml
<CustomField>
    <fullName>primary_cause__c</fullName>
    <label>Primary Cause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Improper/No Training</fullName>
            </value>
            <value>
                <fullName>Standards not followed</fullName>
            </value>
            <value>
                <fullName>Outside Force</fullName>
            </value>
            <value>
                <fullName>Poor Oversight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>