force-app/main/default/objects/Incident_Tracker__c/fields/RDD__c.field-meta.xml
<CustomField>
    <fullName>RDD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Regional Director Development</description>
    <inlineHelpText>Regional Director Development</inlineHelpText>
    <label>Regional Dir Dev</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incidents (RDD)</relationshipLabel>
    <relationshipName>Incidents6Yzr</relationshipName>
    <type>Lookup</type>
</CustomField>