force-app/main/default/objects/Incident_Tracker__c/fields/RDO__c.field-meta.xml
<CustomField>
    <fullName>RDO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Regional Director Operations</inlineHelpText>
    <label>Regional Dir Ops</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incidents (RDO)</relationshipLabel>
    <relationshipName>Incidents6YzX</relationshipName>
    <type>Lookup</type>
</CustomField>