force-app/main/default/objects/Incident_Tracker__c/fields/Region_Formula__c.field-meta.xml
<CustomField>
    <fullName>Region_Formula__c</fullName>
    <formula>Location_Site_Safety__r.region_name__c</formula>
    <inlineHelpText>Populated from the location site safety record</inlineHelpText>
    <label>Region</label>
    <type>Text</type>
</CustomField>