force-app/main/default/objects/Incident_Tracker__c/fields/Regional_Other__c.field-meta.xml
<CustomField>
    <fullName>Regional_Other__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Matches to Other1 (Do NOT add Other2)</description>
    <label>Regional Other</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incidents (Regional Other)</relationshipLabel>
    <relationshipName>Incidents6Z01</relationshipName>
    <type>Lookup</type>
</CustomField>