force-app/main/default/objects/Incident_Tracker__c/fields/Regional_Safety__c.field-meta.xml
<CustomField>
    <fullName>Regional_Safety__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Safety</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incidents (Regional Safety)</relationshipLabel>
    <relationshipName>Incidents9</relationshipName>
    <type>Lookup</type>
</CustomField>