force-app/main/default/objects/Incident_Tracker__c/fields/Regional_Suspension__c.field-meta.xml
<CustomField>
    <fullName>Regional_Suspension__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check when there is a regional suspension</inlineHelpText>
    <label>Regional Suspension</label>
    <type>Checkbox</type>
</CustomField>