force-app/main/default/objects/Incident_Tracker__c/fields/Risk_Hazard_Scoring_Image__c.field-meta.xml
<CustomField>
    <fullName>Risk_Hazard_Scoring_Image__c</fullName>
    <formula>IMAGE(&quot;https://tmo-spectrum--c.na153.content.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0685G00000NX9ak&amp;operationContext=CHATTER&amp;contentId=05T5G00001aQpB9&quot;, &quot;Sorry not available at this time&quot;, 1200, 2100)</formula>
    <label>Risk Hazard Scoring Image</label>
    <type>Text</type>
</CustomField>