force-app/main/default/objects/Incident_Tracker__c/fields/Risk_Rank__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rank__c</fullName>
    <inlineHelpText>See Risk Hazard Scoring image below to guide decisions in Severity</inlineHelpText>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Catastrophic</fullName>
            </value>
            <value>
                <fullName>Significant</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Marginal</fullName>
            </value>
            <value>
                <fullName>Negligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>