force-app/main/default/objects/Incident_Tracker__c/fields/Risk_Rating_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rating_Calculation__c</fullName>
    <formula>CASE(TEXT(Risk_Rank__c),&apos;Negligible&apos;,1,&apos;Marginal&apos;,2,&apos;Moderate&apos;,3,&apos;Significant&apos;,4,&apos;Catastrophic&apos;,5,0) * 
CASE(TEXT(Likelihood__c),&apos;Improbable&apos;,1,&apos;Remote&apos;,2,&apos;Occasional&apos;,3,&apos;Probable&apos;,4,&apos;Frequent&apos;,5,0)</formula>
    <label>Risk Rating Calculation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>