force-app/main/default/objects/Incident_Tracker__c/fields/Risk_Rating_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rating_Score__c</fullName>
    <formula>IF ( Risk_Rating_Calculation__c  &lt;= 3 , 
IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0685G00000NXcKw&amp;operationContext=CHATTER&amp;contentId=05T5G00001aScfZ&quot;,&quot;No Action&quot;,35,100), 
IF ( Risk_Rating_Calculation__c &lt; 7, 
IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0685G00000NXcKx&amp;operationContext=CHATTER&amp;contentId=05T5G00001aScfe&quot;,&quot;Monitor&quot;,35,100), 
IF ( Risk_Rating_Calculation__c &lt; 13,
IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0685G00000NXcL1&amp;operationContext=CHATTER&amp;contentId=05T5G00001aScfj&quot;,&quot;Action&quot;,35,100),
IF ( Risk_Rating_Calculation__c &lt; 16,
IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0685G00000NXcLB&amp;operationContext=CHATTER&amp;contentId=05T5G00001aScft&quot;,&quot;Urgent Action&quot;,35,120),
IF ( Risk_Rating_Calculation__c &lt; 26,
IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0685G00000NXcL2&amp;operationContext=CHATTER&amp;contentId=05T5G00001aScau&quot;,&quot;Stop&quot;,35,100),
&apos;&apos;
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Rating Score</label>
    <type>Text</type>
</CustomField>