force-app/main/default/objects/Incident_Tracker__c/fields/Secondary_Cause__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Cause__c</fullName>
    <label>Secondary Cause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anchor Attachments</fullName>
            </value>
            <value>
                <fullName>Arc/Polarity</fullName>
            </value>
            <value>
                <fullName>Arson/Theft</fullName>
            </value>
            <value>
                <fullName>Bird Nest</fullName>
            </value>
            <value>
                <fullName>Certs Missing/Fake</fullName>
            </value>
            <value>
                <fullName>Material Handling</fullName>
            </value>
            <value>
                <fullName>Equip Dmg/Missing/Improper</fullName>
            </value>
            <value>
                <fullName>Excessive load</fullName>
            </value>
            <value>
                <fullName>Fall From Heights</fullName>
            </value>
            <value>
                <fullName>Hoisting over</fullName>
            </value>
            <value>
                <fullName>Lock out/Tag out</fullName>
            </value>
            <value>
                <fullName>Maint./Installation</fullName>
            </value>
            <value>
                <fullName>Rigging Plan</fullName>
            </value>
            <value>
                <fullName>Slip/Trip/Sprain</fullName>
            </value>
            <value>
                <fullName>Tether</fullName>
            </value>
            <value>
                <fullName>Weather/Nature</fullName>
            </value>
            <value>
                <fullName>Neighbor</fullName>
            </value>
            <value>
                <fullName>Fuel/Oil Spill</fullName>
            </value>
            <value>
                <fullName>PPE Dmg/Missing/Improper</fullName>
            </value>
            <value>
                <fullName>Crane Operator</fullName>
            </value>
            <value>
                <fullName>Welding</fullName>
            </value>
            <value>
                <fullName>Deception</fullName>
            </value>
            <value>
                <fullName>Housekeeping</fullName>
            </value>
            <value>
                <fullName>Confined Space</fullName>
            </value>
            <value>
                <fullName>Criminal Activity</fullName>
            </value>
            <value>
                <fullName>Safety Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>