force-app/main/default/objects/Incident_Tracker__c/fields/Self_reported__c.field-meta.xml
<CustomField>
    <fullName>Self_reported__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was the incident self-reported by the Prime GC or Subcontractor?</inlineHelpText>
    <label>Self-reported w/o compensability</label>
    <type>Checkbox</type>
</CustomField>