force-app/main/default/objects/Incident_Tracker__c/fields/Site_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Site_Name_Formula__c</fullName>
    <formula>Location_Site_Safety__r.Site_Name__c</formula>
    <inlineHelpText>Populated from the Location Site Safety lookup</inlineHelpText>
    <label>Site Name</label>
    <type>Text</type>
</CustomField>