force-app/main/default/objects/Incident_Tracker__c/fields/Stand_Down_TMO_Issued__c.field-meta.xml
<CustomField>
    <fullName>Stand_Down_TMO_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stand Down TMO Issued</label>
    <type>Checkbox</type>
</CustomField>