force-app/main/default/objects/Incident_Tracker__c/fields/Structure_Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>Structure_Vendor_ID__c</fullName>
    <formula>Location_Site_Safety__r.structure_vendor_id__c</formula>
    <label>Structure Vendor ID</label>
    <type>Text</type>
</CustomField>