force-app/main/default/objects/Incident_Tracker__c/fields/Suspension_by_Crew__c.field-meta.xml
<CustomField>
    <fullName>Suspension_by_Crew__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to indicate the crew needs to be suspended</inlineHelpText>
    <label>Suspend Crew</label>
    <type>Checkbox</type>
</CustomField>