force-app/main/default/objects/Incident_Tracker__c/fields/Suspension_Type_T_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Suspension_Type_T_Mobile__c</fullName>
    <inlineHelpText>Select one option to trigger the Suspension process</inlineHelpText>
    <label>Suspension Type (T-Mobile</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suspension by Crew</fullName>
            </value>
            <value>
                <fullName>Regional Suspension</fullName>
            </value>
            <value>
                <fullName>Company Suspension</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>