force-app/main/default/objects/Incident_Tracker__c/fields/suspensionBySiteOwner__c.field-meta.xml
<CustomField>
    <fullName>suspensionBySiteOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspension By Site Owner</label>
    <type>Checkbox</type>
</CustomField>