force-app/main/default/objects/Incident_Tracker__c/fields/SuspensionEntireCompany__c.field-meta.xml
<CustomField>
    <fullName>SuspensionEntireCompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Suspension</label>
    <type>Checkbox</type>
</CustomField>